sample/codepkg/objects/Holdings__c.object
<CustomObject>
    <customHelp>WealthHelp</customHelp>
    <description>Custom object used to manage Holdings information.  This object has a lookup relationship with Financial Accounts and Clients (Person Account).</description>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <description>Asset Type based on selected Holding.</description>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Balanced Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange Traded Funds (ETF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stocks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Asset Type based on Asset Class.</description>
        <label>Asset Type</label>
        <picklist>
            <controllingField>Asset_Class__c</controllingField>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Stock - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Stock - More Aggressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Stock - Sector-Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflation-Indexed Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International/Global Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life-Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxable Intermediate-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxable Long-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxable Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxable Short-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax-Exempt Intermediate-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax-Exempt Long-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax-Exempt Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax-Exempt Short-Term Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Book_Value__c</fullName>
        <description>Book value is calculated based on the # of shares purchased multiplied by the purchase price.</description>
        <formula>Shares__c * Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Client.  Makes it possible to add Holdings related list to the Client detail page.</description>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Holdings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Financial Account</description>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipName>Holdings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund_Asset_Name__c</fullName>
        <description>Fund or Asset name of the holding</description>
        <label>Fund (Asset) Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gain_Loss__c</fullName>
        <description>Gain/Loss based on comparison of Book Value and Market Value</description>
        <formula>Market_Value__c -  Book_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on market value minus book value.</inlineHelpText>
        <label>Gain/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Price__c</fullName>
        <description>Last price for the Security, Fund, or Asset</description>
        <inlineHelpText>Last price for the Security, Fund, or Asset.  Automically updated by accessing the financial account page for this holding.</inlineHelpText>
        <label>Last Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <description>Date the Share Price was last updated</description>
        <label>Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Value__c</fullName>
        <description>Calculated field based on (# of shares X last price)</description>
        <formula>Shares__c  *  Last_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Change__c</fullName>
        <description>Percent change is a comparison between the book value (original purchase value) and current market value.</description>
        <formula>IF(Last_Price__c =0 , 0, ( Market_Value__c - Book_Value__c )/ Book_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Original purchase price of the holding</description>
        <label>Purchase Price</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_ID__c</fullName>
        <description>Identifier for the Security, Fund or Asset</description>
        <label>Security ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shares__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of shares owned</description>
        <label># of Shares</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Symbol_Workflow__c</fullName>
        <externalId>true</externalId>
        <label>Symbol_Workflow</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symbol__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup from Holdings to WM Assets</description>
        <label>Symbol</label>
        <referenceTo>Asset_WME__c</referenceTo>
        <relationshipName>Holdings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Lot__c</fullName>
        <description>Tax Lot for the Security, Fund or Asset</description>
        <label>Tax Lot</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Holding</label>
    <listViews>
        <fullName>HoldingsAll</fullName>
        <columns>NAME</columns>
        <columns>Symbol__c</columns>
        <columns>Fund_Asset_Name__c</columns>
        <columns>Client__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Market_Value__c</columns>
        <columns>Gain_Loss__c</columns>
        <columns>Shares__c</columns>
        <columns>Last_Price__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Holdings - All</label>
    </listViews>
    <listViews>
        <fullName>MyClientHoldingsAll</fullName>
        <columns>NAME</columns>
        <columns>Symbol__c</columns>
        <columns>Fund_Asset_Name__c</columns>
        <columns>Client__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Market_Value__c</columns>
        <columns>Gain_Loss__c</columns>
        <columns>Shares__c</columns>
        <columns>Last_Price__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Client Holdings - All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Holding ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holdings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>